--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/vehicle-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/productdb
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Ga20060905
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
